# aquarius

./: .eslintignore  .eslintrc.json  .gitignore  .prettierrc  .prettierrc.yaml  Anchor.toml  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
migrations/: deploy.ts
programs/caller/: Cargo.toml
programs/caller/src/: lib.rs
programs/chain/: Cargo.toml
programs/chain/src/: errors.rs  lib.rs
programs/chain/src/instructions/: initialize.rs  initialize_first_class_data.rs  mod.rs  set_padding.rs  submit.rs  transfer_ownership.rs  update_first_class_data.rs  verify.rs
programs/chain/src/state/: chain.rs  mod.rs
scripts/: solana_fetch_and_verify_block.ts  solana_fetch_fcd.ts  solana_read_fcd_onchain.ts  utils.ts
src/client/: client.ts  main.ts  utils.ts
src/program-rust/: Cargo.toml
src/program-rust/src/: lib.rs
src/program-rust/tests/: lib.rs
tests/: utils.ts
tests/chain/: caller.test.ts  chain.test.ts  verify.test.ts
tests/utils/: utils.test.ts  utilsWithoutProvider.test.ts
