[package]
name = "chain"
version = "0.1.0"
description = "Umbrella program for writing data to solana"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "chain"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
# anchor-lang = "0.24.2"
anchor-lang = { version = "0.24.2", features = ["init-if-needed"] }
sha3 = "0.10.1"