
[package]
name = "solana-bpf-block-root-mappings"
version = "0.0.1"
description = "Example program for storing block roots in a mapping"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.1"
solana-program = "~1.8.14"

[dev-dependencies]
solana-program-test = "~1.8.14"
solana-sdk = "~1.8.14"

[lib]
name = "block_root_mappings"
crate-type = ["cdylib", "lib"]

